@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.6: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2009-12-31" />
+<meta name="date" content="2010-01-01" />
 <style type="text/css">
 
 /*
@@ -139,12 +139,12 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2009-12-31</td></tr>
+<td>2010-01-01</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.19</td></tr>
 </tbody>
 </table>
-<p>Copyright © 2005-2009</p>
+<p>Copyright © 2005-2010</p>
 <p>This document is distributed under the terms of the GNU General Public
 License as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version. A copy of this
@@ -3114,6 +3114,14 @@ shortcut.</p>
 <td>Ctrl-O  (C)</td>
 <td>Opens a file.</td>
 </tr>
+<tr><td>Open selected file</td>
+<td>Ctrl-Shift-O</td>
+<td>Opens the selected filename.</td>
+</tr>
+<tr><td>Re-open last closed tab</td>
+<td>&nbsp;</td>
+<td>Re-opens the last closed document tab.</td>
+</tr>
 <tr><td>Save</td>
 <td>Ctrl-S  (C)</td>
 <td>Saves the current file.</td>
@@ -5849,7 +5857,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference external" href="geany.txt">View document source</a>.
-Generated on: 2009-12-31 15:43 UTC.
+Generated on: 2010-01-01 23:17 UTC.
 Generated by <a class="reference external" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference external" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
