@@ -121,6 +121,7 @@ enum
 	GEANY_KEYS_FILE_CLOSE,
 	GEANY_KEYS_FILE_CLOSEALL,
 	GEANY_KEYS_FILE_RELOAD,
+	GEANY_KEYS_FILE_OPENLASTTAB,
 	GEANY_KEYS_FILE_COUNT
 };
 
