@@ -2,6 +2,9 @@
 
  * *.*:
    Update copyright information.
+ * src/keybindings.c, src/keybindings.h, src/plugindata.h,
+   doc/geany.txt, doc/geany.html:
+   Add keybinding to open the last closed tab (closes #2912692).
 
 
 2009-12-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
